2008-10-19  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode, eselect-mode): Remove explicit
	"run-hooks", since major mode hooks are already implicitely called
	and would therefore run twice.
	(ebuild-mode-hook, eselect-mode-hook): Don't define.
	(font-lock): Require, needed for XEmacs.

2008-10-15  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-action-alist): New variable.
	(ebuild-mode-keyword): Use it.
	(ebuild-mode-menu): Add submenus for ebuild commands and for
	keyword manipulation.

2008-10-14  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (easymenu): Require.
	(ebuild-mode-menu): Add menu support for both Emacs and XEmacs.
	(ebuild-mode): Activate the menu.

2008-09-26  Christian Faulhammer  <opfer@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-make-keywords-list): \< \> around
	a regexp can be obtained via paren option of regexp-opt

2008-09-10  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-deprecated):
	New variable.
	(ebuild-mode-keywords-elisp-common): Deprecate "elisp-comp".

2008-09-07  Christian Faulhammer  <opfer@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-warn): Add EAPI
	variable, so it gets highlighted
	Remove all occurrences of PHP 4 functions

2008-05-08  Ulrich Mueller  <ulm@gentoo.org>

	* Version 1.9 released.

2008-03-30  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (sh-script): Require sh-script, in order to
	quieten the byte-compiler.
	(ebuild-mode, eselect-mode): Call make-local-hook only for XEmacs.
	(ebuild-mode-get-keywords): Don't use match-string-no-properties
	since the function doesn't exist in XEmacs 21.4.

2008-02-24  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-arch-stable-list)
	(ebuild-mode-arch-list): Move mips to unstable, remove ppc-macos.

2008-02-21  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-pam):
	Change "pamd_mimic_system" in "pamd_mimic".
