@@ -58,8 +58,9 @@ A formfeed is not considered whitespace by this function."
   ;; Note: XEmacs doesn't have generic.el
   (unless (listp keywords-list)
     (error "Keywords argument must be a list of strings"))
-  (cons (concat prefix
-		(regexp-opt keywords-list 'words)
+
+  (cons (concat prefix "\\<"
+		(regexp-opt keywords-list t) "\\>"
 		suffix)
 	face))
 
