@@ -1,3 +1,8 @@
+2008-10-19  Christian Faulhammer  <opfer@gentoo.org>
+
+	* gentoo-syntax.el (ebuild-mode-make-keywords-list): Revert r1051,
+	not compatible with XEmacs and Emacs <=21
+
 2008-10-19  Ulrich Mueller  <ulm@gentoo.org>
 
 	* gentoo-syntax.el (ebuild-mode, eselect-mode): Remove explicit
